# pipnn-scanpy

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  README_pypi.md  RELEASING.md  build_notebook.py  pyproject.toml
.github/workflows/: ann-isorecall-x86.yml  ci.yml  pyglass-portable-wheels.yml  release.yml
bench/: ann_isorecall_sift.json  ann_isorecall_sift_x86.json  bench_ann_isorecall.py  bench_lib.py  bench_matched_recall.py  bench_pipnn_vs_hnsw.py  bench_scaling.py  bench_scaling_all.py  bench_tahoe.py  bench_xcompare.py  matched_recall.json  pipnn_vs_hnsw.json  scaling_all.json  scaling_results.json  tahoe_bench.json  tahoe_plot_all.py  tahoe_prep.py  tahoe_pynndescent.py  xcompare.json
crates/pipnn-core/: Cargo.toml
crates/pipnn-core/src/: batch_query.rs  bruteforce.rs  build.rs  dataset.rs  graph.rs  hnsw.rs  lib.rs  metric.rs  params.rs  robust_prune.rs
crates/pipnn-core/src/hashprune/: hyperplanes.rs  mod.rs  reservoir.rs
crates/pipnn-core/src/leaf/: build.rs  gemm.rs  mod.rs
crates/pipnn-core/src/partition/: ball_carving.rs  mod.rs
crates/pipnn-core/src/search/: beam_search.rs  mod.rs
crates/pipnn-core/tests/: determinism.rs  recall.rs
docker/: Dockerfile  docker_compare.py
notebooks/: pipnn_vs_pynndescent.ipynb
python/pipnn/: __init__.py  index.py  transformer.py
python/pipnn/contrib/: __init__.py  faiss.py  glass.py  hnsw.py
src/: lib.rs
tests/: bench_real.py  bench_vs_pynndescent.py  test_backends.py  test_query.py  test_recall_sklearn.py  test_scanpy_e2e.py  test_transformer_contract.py
tools/pyglass-portable/: README.md  build_wheel.sh  portable.patch
